Трансляція розкладу та статусів безпеки (тривога/мовчання) у реальному часі